# senlegal

./: .env.prod.example  analyze_rag_results.py  docker-compose.coolify.yml  docker-compose.prod.yml  docker-compose.yml  generate_datasets.py  generate_report.py  rag_analysis.json  rag_test_results.json  test_rag_100.py
ai/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
ai/app/: config.py  main.py  schemas.py
ai/app/api/: chat.py  health.py  ingest.py  search.py
ai/app/llm/: generator.py  keyword_extractor.py  model.py  prompts.py  query_rewriter.py
ai/app/rag/: chunker.py  embeddings.py  glossary.py  ingestion.py  pdf_loader.py  retriever.py  single_ingest.py  vectorstore.py
ai/data/chroma/59c491f4-84fe-4742-9b40-d98565c30cf4/: index_metadata.pickle
ai/data/chroma/e475f03c-e867-4d5b-b1fa-9abd75576efb/: index_metadata.pickle
ai/data/processed/: chunks.json
ai/scripts/: reindex.py
ai/tests/: test_chunker.py  test_keyword_extractor.py  test_prompts.py  test_query_rewriter.py  test_retriever.py  test_retriever_multi.py
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  package.json  prisma.config.ts  tsconfig.build.json  tsconfig.build.tsbuildinfo  tsconfig.json
backend/prisma/: schema.prisma  seed.ts
backend/scripts/: expire-subscriptions.ts
backend/src/: app.module.ts  main.ts
backend/src/prisma/: prisma.service.ts
caddy/: Caddyfile
frontend/: .env.example  Dockerfile  nuxt.config.ts  package.json
frontend/app/: app.vue  error.vue
presentation/: index.css  index.html
(+112 files in other folders)
