[project]
name = "senlegal-ai"
version = "0.1.0"
description = "Service IA RAG pour le Code des marchés publics du Sénégal"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1.0",
    "pdfplumber>=0.11.0",
    "chromadb>=0.5.5",
    "sentence-transformers>=3.0.0",
    "ollama>=0.6.0",
    "huggingface-hub>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
